# Zip

./: Zip.podspec
Zip/: Zip.swift
Zip/minizip/: CMakeLists.txt
Zip/minizip/module/: module.modulemap
build-scripts/Windows/: Build-Zip.bat  Build-Zip.ps1
build-scripts/Windows-5.10/: Build-Zip.ps1
